Kleopatra: Crash when unplugging smartcard while operation is in progress
Closed, ResolvedPublic

Assigned To
Authored By
ikloecker
Nov 5 2024, 4:05 PM

Description

How to reproduce:

  • Insert a smartcard and open the Smartcard view
  • Open menu for a slot and choose Generate New Key
  • Proceed to the algorithm selection but don't click OK
  • Unplug card and re-plug it
  • Now click OK in the algorithm selection window

-> You get an error that the card was not found.

  • Click OK

-> crash

Note: Re-plugging the card isn't required to provoke the crash.

Event Timeline

ikloecker created this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ebo triaged this task as Normal priority.Nov 5 2024, 4:20 PM
ebo added a project: vsd33.
ikloecker changed the task status from Open to Testing.Nov 5 2024, 4:22 PM
ikloecker moved this task from Backlog to WiP on the vsd33 board.

Fixed and backported for VSD 3.3

ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Nov 8 2024, 2:09 PM
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Nov 14 2024, 11:01 AM

Gpg4win-Beta-75+

Works, you now get an error message that the card can not be found.

ebo edited projects, added vsd33 (vsd-3.3.0); removed vsd33.