Don't crash if there is no current smartcard widget (anymore)

This happens if a smartcard is unplugged while a smartcard command is
in progress.

GnuPG-bug-id: 7372